--- a/docker/personal-host.yml
+++ b/docker/personal-host.yml
@@ -7,7 +7,7 @@ services:
      - "127.0.0.1:8443:443"
      - "127.0.0.1:8021:21"
      - "127.0.0.1:8022:22"
-    image: "default"
+    image: "theraw/web-pro:web"
     privileged: true
     restart: unless-stopped
     shm_size: 512MB
@@ -16,7 +16,8 @@ services:
     networks:
       web_pro_net:
         ipv4_address: 172.69.0.70
-        
+    command: ["nginx", "-g", "daemon off;"]
+
   php73:
     container_name: php73
     ports:
@@ -24,7 +25,7 @@ services:
      - "127.0.0.1:9002:9002"
      - "127.0.0.1:9004:9004"
      - "127.0.0.1:9006:9006"
-    image: "default"
+    image: "theraw/web-pro:php73"
     privileged: true
     restart: unless-stopped
     shm_size: 512MB
@@ -33,13 +34,14 @@ services:
     networks:
       web_pro_net:
         ipv4_address: 172.69.0.90
-        
+    command: /sbin/init
+
   mysql:
     container_name: mysql
     ports:
      - "127.0.0.1:8090:80"
      - "127.0.0.1:3306:3306"
-    image: "default"
+    image: "theraw/web-pro:mysql"
     privileged: true
     restart: unless-stopped
     shm_size: 512MB
@@ -48,6 +50,7 @@ services:
     networks:
       web_pro_net:
         ipv4_address: 172.69.0.72
+    command: /usr/bin/mysqld --user=mysql --console --skip-name-resolve --skip-networking=0
 
 networks:
   web_pro_net:
