--- a/etc/php/7.3/fpm/pool.d/www.conf
+++ b/etc/php/7.3/fpm/pool.d/www.conf
@@ -78,6 +78,14 @@ env[TEMP]                 = /tmp
 
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-;php_admin_value[error_log] = /var/log/fpm-php.www.log
-;php_admin_flag[log_errors] = on
-php_admin_value[memory_limit] = 128M
+
+php_admin_value[error_log]              = PHP_ERR.log
+php_admin_flag[log_errors]              = on
+php_admin_value[max_execution_time]     = 90
+php_admin_value[max_input_time]         = 90
+php_admin_flag[output_buffering]        = Off
+php_admin_value[post_max_size]          = 128M
+php_admin_value[upload_max_filesize]    = 128M
+php_admin_value[max_file_uploads]       = 20
+php_admin_value[default_socket_timeout] = 90
+php_admin_value[memory_limit]           = 128M
